# irods-microservices

./: .gitignore  CMakeLists.txt  MSI TESTS PASSED.md  Makefile  README.md  VERSION  unmount.cpp
CMakeModules/: FindJansson.cmake  FindRabbitmq.cmake
msi_amqp_basic_publish/: Makefile  msi_amqp_basic_publish.cpp  msi_amqp_basic_publish_test.r
msi_getenv/: Makefile  msi_getenv.cpp  msi_getenv_test.r
msi_http_send_file/: Makefile  msi_http_send_file.cpp  msi_http_send_file_test.r
msi_json_arrayops/: Makefile  README.md  libmsi_json_arrayops.cpp  msi_json_arrayops_test.r
msi_json_objops/: Makefile  README.md  libmsi_json_objops.cpp  msi_json_objops_test.r
msi_rmw_avu/: msi_rmw_avu.cpp
msi_set_avu/: msi_set_avu.cpp  msi_set_avu_test.r
msi_time_ts2str/: Makefile  README.md  libmsi_time_ts2str.cpp  msi_time_ts2str_test.r
msi_unmount/: Makefile  unmount.cpp  unmount_test.r
msiput_dataobj_or_coll/: README.md  libmsiput_dataobj_or_coll.cpp  msi_put_test.r  msiput_dataobj_or_coll_test.r
packaging/: build.sh  find_os.sh  find_os_version.sh  rit-irods-microservices.list.template
test-rules/: unmount.r
